--- a/CV/Content/xmylife.css
+++ b/CV/Content/xmylife.css
@@ -1,6 +1,6 @@
 ﻿.section-content {
-    padding-top: 50px;
-    height: 100%;
+    /*padding-top: 50px;*/
+    /*height: 100%;*/
     margin-left: 100px;
     margin-right: 100px;
 }
