--- a/CV/Views/Home/MyLife.cshtml
+++ b/CV/Views/Home/MyLife.cshtml
@@ -1,5 +1,5 @@
 ﻿<script src="~/Scripts/fullpage.js"></script>
-<script src="~/Scripts/xmylife.es6.js"></script>
+<script src="~/Scripts/index.es6.js"></script>
 <link rel="stylesheet" href="~/Content/fullpage.css">
 
 <link rel="stylesheet" href="~/Content/xmylife.css">
@@ -9,9 +9,7 @@
 <div id="fullpage">
     <div class="section" id="section0">
         <div class="section-content">
-            <span class="head white">
-                Kia Ora!
-            </span>
+            <span class="head white">Kia Ora!</span>
             <span class="sub-head white">I'm Ed</span>
             <p>
                 This page is to get an insight on my background .. Help with text please
@@ -19,19 +17,40 @@
         </div>
     </div>
 
-    <div class="section" id="section1">
-        <div class="section-content">
-            <span class="head">
-                Kia Ora!
-            </span>
-            <span class="sub-head">I'm Ed</span>
+    <div class="section" id="section1" data-anchor="2">
+        <div class="section-content-80">
             <p>
-                "Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum."
-                "Sed ut perspiciatis unde omnis iste natus error sit voluptatem accusantium doloremque laudantium, totam rem aperiam, eaque ipsa quae ab illo inventore veritatis et quasi architecto beatae vitae dicta sunt explicabo. Nemo enim ipsam voluptatem quia voluptas sit aspernatur aut odit aut fugit, sed quia consequuntur magni dolores eos qui ratione voluptatem sequi nesciunt. Neque porro quisquam est, qui dolorem ipsum quia dolor sit amet, consectetur, adipisci velit, sed quia non numquam eius modi tempora incidunt ut labore et dolore magnam aliquam quaerat voluptatem. Ut enim ad minima veniam, quis nostrum exercitationem ullam corporis suscipit laboriosam, nisi ut aliquid ex ea commodi consequatur? Quis autem vel eum iure reprehenderit qui in ea voluptate velit esse quam nihil molestiae consequatur, vel illum qui dolorem eum fugiat quo voluptas nulla pariatur?"
+                I'm a software developer <strong>wanna-be</strong>. Although I know how to code and how general programming works, I have not achieved my goal to becoming a software architect ninja guru sensei master.
             </p>
         </div>
     </div>
-    <div class="section" id="section2">s</div>
+    <div class="section" id="section2">
+        <div class="section-content">
+            <div>
+                <span class="head">1988</span>
+                <span class="sub-head">Born in Cebu, Philippines - where seashells are used as currency</span>
+            </div>
+
+            <div>
+                <div class="img"></div>
+                <p>
+                    They don't really, but it is known to be the oldest city of the country. That is a picture of a young me.
+                </p>
+            </div>
+            <div class="clear-fix"></div>
+            <div>
+                <span class="head">2002</span>
+                <span class="sub-head">Born in Cebu, Philippines - where seashells are used as currency</span>
+            </div>
+
+            <div>
+                <div class="img"></div>
+                <p>
+                    They don't really, but it is known to be the oldest city of the country. That is a picture of a young me.
+                </p>
+            </div>
+        </div>
+    </div>
     <div class="section" id="section3">e</div>
 
 </div>
