--- a/CV/Views/Shared/_Layout.cshtml
+++ b/CV/Views/Shared/_Layout.cshtml
@@ -4,14 +4,15 @@
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width" />
     <title>@ViewBag.Title</title>
+    <link rel="stylesheet" href="~/Content/bulma.css">
+    <link href="https://fonts.googleapis.com/css?family=Source+Sans+Pro" rel="stylesheet">
     <link rel="stylesheet" href="~/Content/x.css">
-    <link href="https://fonts.googleapis.com/css?family=Source+Sans+Pro" rel="stylesheet">
-    <link href="https://fonts.googleapis.com/css?family=Source+Sans+Pro" rel="stylesheet">
+
 
 </head>
 <body>
     <script src="~/Scripts/jquery-3.3.1.js"></script>
-<script src="~/Scripts/x.es6.js"></script>
+    <script src="~/Scripts/x.es6.js"></script>
 <div id="navbar">
     <ul>
         <li><a href="#"> Why me? </a></li>
