--- a/CV/Content/x.css
+++ b/CV/Content/x.css
@@ -14,17 +14,14 @@
     font-weight: bold;
 }
 
-.text-center {
+/*.text-center {
     text-align: center;
 }
 
 .white {
     color: white;
-}
+}*/
 
-p {
-    font-size: 18px;
-}
 
 body {
     margin: 0;
@@ -36,7 +33,6 @@ body {
     position: relative;
     /*padding-left: 100px;
     padding-right: 100px;*/
-
 }
 
 #navbar {
@@ -54,28 +50,27 @@ body {
     display: none;
 }
 
-#navbar ul{
-    height: 100%;
+    #navbar ul {
+        height: 100%;
+        text-align: center;
+        padding: 0;
+        margin: 0 auto;
+    }
 
-    text-align: center;
-    padding: 0;
-    margin: 0 auto;
-}
+    #navbar li {
+        position: relative;
+        padding-top: 10px;
+        padding-bottom: 10px;
+    }
 
-#navbar li {
-    position: relative;
-    padding-top: 10px;
-    padding-bottom: 10px;
-}
-
-#navbar a {
-    text-decoration: none;
-    color: black;
-}
+    #navbar a {
+        text-decoration: none;
+        color: black;
+    }
 
 /*Hamburger menu*/
 
-#nav-button{
+#nav-button {
     position: fixed;
     border: none;
     background-color: transparent;
@@ -85,37 +80,139 @@ body {
     z-index: 10;
 }
 
-#nav-button:focus {
-    outline: none;
-}
+    #nav-button:focus {
+        outline: none;
+    }
 
-#nav-button span
-{
-    display: block;
-    width: 30px;
-    height: 4px;
-    margin-bottom: 5px;
-    position: relative;
-  
-    background: black;
-    border-radius: 3px;
-  
-    z-index: 1;
-  
-    /*transform-origin: 4px 0px;
+    #nav-button span {
+        display: block;
+        width: 30px;
+        height: 4px;
+        margin-bottom: 5px;
+        position: relative;
+        background: white;
+        border-radius: 3px;
+        z-index: 1;
+        /*transform-origin: 4px 0px;
   
     transition: transform 0.5s cubic-bezier(0.77,0.2,0.05,1.0),
                 background 0.5s cubic-bezier(0.77,0.2,0.05,1.0),
                 opacity 0.55s ease;*/
-}
+    }
 
-.section-content {
-    
-    
+.section-content-80 {
+    margin-left: 100px;
+    margin-right: 100px;
+    height: 80%;
 }
 
 .section-content p {
-    padding-top: 50px;
+    padding-bottom: 20px;
+    text-align: justify;
+}
+
+.section-content .img {
+    background-color: lemonchiffon;
+    width: 100px;
+    height: 100px;
+    float: left;
+}
+
+.clear-fix {
+    clear: both;
+}
+
+.primary {
+    -moz-box-shadow: -2px 2px 1px 0px #8199db;
+    -webkit-box-shadow: -2px 2px 1px 0px #8199db;
+    box-shadow: -2px 2px 1px 0px #8199db;
+    /*background:-webkit-gradient(linear, left top, left bottom, color-stop(0.05, #9ebaeb), color-stop(1, #647a94));
+    background:-moz-linear-gradient(top, #9ebaeb 5%, #647a94 100%);
+    background:-webkit-linear-gradient(top, #9ebaeb 5%, #647a94 100%);
+    background:-o-linear-gradient(top, #9ebaeb 5%, #647a94 100%);
+    background:-ms-linear-gradient(top, #9ebaeb 5%, #647a94 100%);*/
+    background: linear-gradient(to bottom, #9ebaeb 5%, #647a94 100%);
+    /*filter:progid:DXImageTransform.Microsoft.gradient(startColorstr='#9ebaeb', endColorstr='#647a94',GradientType=0);*/
+    background-color: #9ebaeb;
+    -moz-border-radius: 10px;
+    -webkit-border-radius: 10px;
+    border-radius: 2px;
+    border: 1px solid #647a94;
+    display: inline-block;
+    cursor: pointer;
+    color: #ffffff;
+    font-family: Arial;
+    font-size: 20px;
+    padding: 10px 20px;
+    text-decoration: none;
+    text-shadow: -2px 2px 4px #283966;
+}
+
+.section-content {
+    margin-left: 100px;
+    margin-right: 100px;
+}
+
+.clickable {
+    transition: transform .3s;
+}
+
+    .clickable:hover {
+        cursor: pointer;
+        -webkit-filter: grayscale(0);
+        transition: transform .3s;
+        transform: scale(1.04);
+        z-index: 50;
+    }
+
+.grayscale {
+    -webkit-filter: grayscale(1);
+}
+
+.description {
+    bottom: 0;
 }
 
 
+
+.counter {
+    height: 1rem;
+    width: 10%;
+    margin-right: 5px;
+    /*width: 150px;
+    height: 100px;*/
+    background: #1abc9c;
+    -webkit-transform: skewX(-20deg);
+    transform: skewX(-20deg);
+    display: inline-block;
+}
+
+@media screen and (max-width: 768px) {
+    .level-item:not(:last-child).counter {
+        margin-bottom: 0 !important;
+    }
+}
+
+.is-parent-overlay {
+    position: relative;
+}
+
+.is-child-overlay {
+    top: 0;
+    bottom: 0;
+    left: 0;
+    right: 0;
+    position: absolute;
+}
+
+.container {
+    margin: 5%;
+}
+
+.auto-margin {
+    margin: auto;
+}
+
+.remove-filter {
+    filter: brightness(100%);
+}
