--- a/CV/Views/Home/Index.cshtml
+++ b/CV/Views/Home/Index.cshtml
@@ -1,1 +1,336 @@
-﻿
+﻿<script src="~/Scripts/scrolloverflow.min.js"></script>
+@*<script src="~/Scripts/fullpage.js"></script>*@
+<script src="~/Scripts/Index.es6.js"></script>
+@*<link rel="stylesheet" href="~/Content/fullpage.css">*@
+<link rel="stylesheet" href="~/Content/fontawesome.css">
+<link rel="stylesheet" href="~/Content/xindex.css">
+
+
+
+<div id="fullpage">
+
+    @*Intro*@
+    <div class="hero is-fullheight" id="section0">
+        <div class="container auto-margin">
+            <div class="is-div-centered">
+                <h1 class="title has-text-white">Kia Ora! I'm Ed.</h1>
+                <h1 class="title has-text-white">
+                    Not just a software developer.
+                </h1>
+                @*<input id="MyLifeStory" class="primary call-to-action" type="button" value="My life story..." />*@
+            </div>
+        </div>
+    </div>
+
+
+
+    @*Skills*@
+    <div class="hero is-fullheight has-background-white">
+        <div class="container">
+            <div class="level">
+                <h1 class="title is-1 level-left">Check my skillz</h1>
+                <div class="select is-small level-right">
+                    <select>
+                        <option>Skill level</option>
+                        <option>Number of years</option>
+                    </select>
+                </div>
+            </div>
+
+
+
+            <div class="tile is-ancestor joke">
+                <div class="tile is-parent">
+                    <div class="tile is-child box">
+                        <div class="columns">
+                            <div class="column">
+                                <h2 class="title is-3">Backend</h2>
+                                <div class="columns">
+                                    <div class="column is-3"> C# .NET</div>
+                                    <div class="column is-9 is-div-centered">
+                                        <div class="myprogress has-text-centered" data-years="2"></div>
+                                    </div>
+                                </div>
+                                <div class="columns">
+                                    <div class="column is-3"> SQL </div>
+                                    <div class="column is-9  is-div-centered">
+                                        <div class="myprogress has-text-centered" data-years="5"></div>
+                                    </div>
+                                </div>
+                            </div>
+                            <div class="column">
+                                <h2 class="title is-3">Frontend</h2>
+                                <div class="columns">
+                                    <div class="column is-3"> VueJS </div>
+                                    <div class="column is-9 is-div-centered">
+                                        <div class="myprogress has-text-centered" data-years="2"></div>
+                                    </div>
+                                </div>
+                                <div class="columns">
+                                    <div class="column is-3"> TypeScript </div>
+                                    <div class="column is-9 is-div-centered">
+                                        <div class="myprogress has-text-centered" data-years="2"></div>
+
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+
+                </div>
+            </div>
+            <div class="tile is-ancestor joke">
+                <div class="tile is-parent">
+                    <div class="tile is-child box">
+                        <div class="columns">
+                            <div class="column">
+                                <h2 class="title is-3">Systems and servers</h2>
+                                <div class="columns">
+                                    <div class="column is-3"> IIS </div>
+                                    <div class="column is-9 is-div-centered">
+                                        <div class="myprogress has-text-centered" data-years="7"></div>
+
+                                    </div>
+                                </div>
+                                <div class="columns">
+                                    <div class="column is-3"> MS-SQL </div>
+                                    <div class="column is-9 is-div-centered">
+                                        <div class="myprogress has-text-centered" data-years="7"></div>
+
+                                    </div>
+                                </div>
+                                <div class="columns">
+                                    <div class="column is-3"> Azure </div>
+                                    <div class="column is-9 is-div-centered">
+                                        <div class="myprogress has-text-centered" data-years="2"></div>
+                                    </div>
+                                </div>
+                            </div>
+
+
+                            <div class="column">
+                                <h2 class="title is-3">Non technical</h2>
+                                <div class="columns">
+                                    <div class="column is-3"> Customer service </div>
+                                    <div class="column is-9 is-div-centered">
+                                        <div class="myprogress has-text-centered" data-years="7"></div>
+                                    </div>
+                                </div>
+                                <div class="columns">
+                                    <div class="column is-3"> Team leader</div>
+                                    <div class="column is-9 is-div-centered">
+                                        <div class="myprogress has-text-centered" data-years="5"></div>
+                                    </div>
+                                </div>
+                                <div class="columns">
+                                    <div class="column is-3"> Project management</div>
+                                    <div class="column is-9 is-div-centered">
+                                        <div class="myprogress has-text-centered" data-years="5"></div>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+            <div class="content">
+                <span class="has-text-weight-bold">This is obviously a joke.</span> I've always found it strange how people include skill levels in their CV because:
+                <ol>
+                    <li> Your level of mastery will always be different to the next guy </li>
+                    <li> I don't think you can ever 100% master a tool because people always find different ways of using it outside of its original purpose</li>
+                </ol>
+                <p>
+                    Instead, I can show the number of years I've had the chance to hone these skills. Even the number of years don't count so much. <span class="has-text-weight-bold">What really matters is how much an individual has learnt in those years </span>.
+                </p>
+                <a id="showme" class="button">Show me anyway</a>
+            </div>
+        </div>
+
+    </div>
+</div>
+
+
+@*Projects*@
+<div class="hero is-fullheight has-background-white-ter">
+    <div class="container">
+        <h1 class="title is-1 text-center">Latest projects</h1>
+        <div class="tile is-ancestor">
+            <div class="tile is-4 is-parent">
+                <div class="tile is-child box clickable grayscale">
+                    <div class="image is-128x128 level-left is-div-centered level-item">
+                        <img class="" src="~/Content/img/soonsoon.png" />
+                    </div>
+                    <div>
+                        <p>
+                            NFTB is a native mobile application that
+                        </p>
+                    </div>
+                </div>
+
+            </div>
+
+            <div class="tile is-4 is-parent">
+                <div class="tile is-child box clickable grayscale">
+                    <div class="image is-128x128 is-div-centered level-item">
+                        <img class="" src="~/Content/img/nftb.png" />
+                    </div>
+                    <div>
+                        <p>
+
+                        </p>
+                    </div>
+                </div>
+
+            </div>
+
+            <div class="tile is-4 is-parent">
+                <div class="tile is-child box clickable grayscale">
+                    <div class="image is-128x128 is-div-centered level-item">
+                        <img class="" src="~/Content/img/crm.png" />
+                    </div>
+                    <div>
+                        <p>
+
+                        </p>
+                    </div>
+                </div>
+
+            </div>
+        </div>
+        <div class="level-right">
+            <a class="button is-info is-rounded subtitle">
+                View all projects
+            </a>
+        </div>
+    </div>
+</div>
+
+<div class="hero is-fullheight">
+    <div class="container">
+        <div class="columns">
+            <div class="column is-6">
+                <div class="field">
+                    <label class="label">Name</label>
+                    <div class="control">
+                        <input class="input" type="text" placeholder="Text input">
+                    </div>
+                </div>
+            </div>
+            <div class="column is-6">
+                <div class="field">
+                    <label class="label">Organisation</label>
+                    <div class="control">
+                        <input class="input" type="text" placeholder="Text input">
+                    </div>
+                </div>
+            </div>
+
+
+        </div>
+        <div class="columns">
+            <div class="column is-12">
+                <div class="field">
+                    <label class="label">Message</label>
+                    <div class="control">
+                        <textarea class="textarea" placeholder="Say hi or something"></textarea>
+                    </div>
+                </div>
+            </div>
+        </div>
+        <input type="button" class="button" value="Send"/>
+
+    </div>
+
+
+</div>
+
+
+
+
+@*<div class="section" id="section1" data-anchor="2">
+        <div class="section-content-80 is-vertical-center">
+            <div class="tile is-ancestor is-fullheight">
+                <div class="tile is-4 is-vertical is-parent is-fullheight">
+                    <div class="tile is-child box is-vertical-center">
+                        <p>I'm a C# .NET software developer based in Auckland</p>
+                    </div>
+                    <div class="tile is-child box is-vertical-center">
+                        <p>I want to reach ninja guru sensei master gosu level full-stack developer someday</p>
+                    </div>
+
+                    <div class="tile is-child box is-vertical-center">
+                        <p>I'm lazy so I love problem solving to make my life easier</p>
+                    </div>
+                </div>
+                <div class="tile is-parent">
+                    <div class="tile is-child box">
+                        <div class="columns">
+                            <div id="project-1-img" class="column">
+                                <div class="image is-128x128 level-left clickable grayscale">
+                                    <img class="" src="~/Content/img/nftb.png" />
+                                </div>
+                            </div>
+
+
+                            <div id="project-2-img" class="column">
+                                <div class="image is-128x128 level-left clickable grayscale">
+                                    <img class="" src="~/Content/img/soonsoon.png" />
+                                </div>
+                            </div>
+
+
+                            <div class="column">
+                                <div class="image is-128x128 level-left clickable grayscale">
+                                    <img class="" src="~/Content/img/crm.png" />
+                                </div>
+                            </div>
+
+                            <div class="column">
+                                <div class="image is-128x128 level-left clickable grayscale">
+                                    <img class="" src="~/Content/img/edenco.png" />
+                                </div>
+                            </div>
+
+                        </div>
+                        <div id="project-1-desc" class="is-fullwidth">
+                            NFTB is a mobile app developed using Xamarin.Forms. It is a attendance and payment management system that helps me track blah blah
+                        </div>
+                        <div id="project-2-desc" class="is-fullwidth">
+                            Proj 2
+                        </div>
+                    </div>
+                </div>
+            </div>
+
+        </div>
+    </div>*@
+</div>
+@*<div class="section" id="section2">
+        <div class="section-content">
+            <div>
+                <span class="head">1988</span>
+                <span class="sub-head">Born in Cebu, Philippines - where seashells are used as currency</span>
+            </div>
+
+            <div>
+                <div class="img"></div>
+                <p>
+                    They don't really, but it is known to be the oldest city of the country. That is a picture of a young me.
+                </p>
+            </div>
+            <div class="clear-fix"></div>
+            <div>
+                <span class="head">2002</span>
+                <span class="sub-head">Born in Cebu, Philippines - where seashells are used as currency</span>
+            </div>
+
+            <div>
+                <div class="img"></div>
+                <p>
+                    They don't really, but it is known to be the oldest city of the country. That is a picture of a young me.
+                </p>
+            </div>
+        </div>
+    </div>
+    <div class="section" id="section3">e</div>*@
+
