--- a/CV/Views/Shared/_Layout.cshtml
+++ b/CV/Views/Shared/_Layout.cshtml
@@ -11,8 +11,12 @@
 
 </head>
 <body>
-    <script src="~/Scripts/jquery-3.3.1.js"></script>
-    <script src="~/Scripts/x.es6.js"></script>
+<script src="~/Scripts/jquery-3.3.1.js"></script>
+<script src="~/Scripts/vue.js"></script>
+
+<script src="~/Scripts/x.es6.js"></script>
+<script src="~/Scripts/xmylife.es6.js"></script>
+
 <div id="navbar">
     <ul>
         <li><a href="#"> Why me? </a></li>
@@ -20,7 +24,7 @@
         <li><a href="#"> About </a></li>
     </ul>
 </div>
-<div id="container">
+<div id="vue-instance">
     <button id="nav-button">
         <span></span>
         <span></span>
@@ -29,5 +33,6 @@
     @RenderBody()
 
 </div>
+
 </body>
 </html>
