--- a/CV/Views/Home/MyLife.cshtml
+++ b/CV/Views/Home/MyLife.cshtml
@@ -1,56 +1,255 @@
-﻿<script src="~/Scripts/fullpage.js"></script>
-<script src="~/Scripts/index.es6.js"></script>
-<link rel="stylesheet" href="~/Content/fullpage.css">
-
+﻿<link rel="stylesheet" href="~/Content/bulma-timeline.min.css">
 <link rel="stylesheet" href="~/Content/xmylife.css">
 
+<div class="container">
+
+<h1 class="title is-1 has-bottom-border"> Short story of my life </h1>
+<div class="timeline is-centered">
+<header class="timeline-header">
+    <span class="tag is-large is-primary">Start</span>
+</header>
+    
+
+<timeline-item title="1988" subtitle="Born in Cebu, Philippines - where seashells are used as currency" image="littleme.jpg" description="Back when I was a noob at life. Still kinda am"></timeline-item>
+@*Section*@
+@*<div class="timeline-item is-primary">
+        <div class="timeline-marker is-primary is-centered">
+        </div>
+        <div class="timeline-content box">
+            <h4 class="title is-4">1988</h4>
+            <h4 class="subtitle is-6">Born in Cebu, Philippines - where seashells are used as currency</h4>
+            <div class="box has-background-white-ter">
+                <div class="image is-128x128" v-backgroundimage="'littleme.jpg'"></div>
+                <p>This is me Born in Cebu, Philippines - where seashells are used as currency Born in Cebu, Philippines - where seashells are used as currency Born in Cebu, Philippines - where seashells are used as currency Born in Cebu, Philippines - where seashells are used as currency</p>
+            </div>
+
+        </div>
+    </div>*@
+
+@*<div class="timeline-item is-primary">
+        <div class="timeline-marker is-primary is-centered">
+        </div>
+        <div class="timeline-content box">
+            <h4 class="title is-4">1988</h4>
+            <h4 class="subtitle is-6">Born in Cebu, Philippines - where seashells are used as currency</h4>
+            <div class="box has-background-white-ter">
+                <div class="image is-128x128" v-backgroundimage="'littleme.jpg'"></div>
+                <p>This is me Born in Cebu, Philippines - where seashells are used as currency Born in Cebu, Philippines - where seashells are used as currency Born in Cebu, Philippines - where seashells are used as currency Born in Cebu, Philippines - where seashells are used as currency</p>
+            </div>
+
+        </div>
+    </div>*@
 
 
-<div id="fullpage">
-    <div class="section" id="section0">
-        <div class="section-content">
-            <span class="head white">Kia Ora!</span>
-            <span class="sub-head white">I'm Ed</span>
-            <p>
-                This page is to get an insight on my background .. Help with text please
-            </p>
+
+@*<div class="timeline-item is-primary">
+            <div class="timeline-marker is-image is-128x128">
+                <div class="image is-128x128" v-backgroundimage="'littleme.jpg'">
+                </div>
+            </div>
+            <div class="timeline-content is-128x128">
+                <p class="auto-margin">This is me</p>
+            </div>
+        </div>*@
+
+
+@*Section*@
+<timeline-item title="2002" subtitle="Travelled to New Zealand through a floatation device that kiwi natives call 'Waka'" image="qt.jpg" description="Queenstown. Probably my favourite place in NZ"></timeline-item>
+
+
+
+@*<div class="timeline-item is-primary">
+            <div class="timeline-marker is-primary is-centered"></div>
+            <div class="timeline-content">
+                <h4 class="title is-4">2002</h4>
+                <h4 class="subtitle is-6">Travelled to New Zealand through a floatation device that kiwi natives call “Waka”</h4>
+            </div>
+        </div>*@
+
+
+
+@*<div class="timeline-item is-primary">
+            <div class="timeline-marker is-image is-128x128">
+                <div class="image is-128x128" v-backgroundimage="'qt.jpg'">
+                </div>
+            </div>
+            <div class="timeline-content is-128x128">
+                <p class="auto-margin">Queenstown. Probably my favourite place in NZ</p>
+            </div>
+        </div>*@
+
+
+
+
+@*Section*@
+<timeline-item title="2007" subtitle="Started obtaining a signed piece of paper to help me disguise as an adult" image="dancinguni.jpg" description="I did a lot of dancing during my uni days..."></timeline-item>
+
+@*<div class="timeline-item is-primary">
+            <div class="timeline-marker is-primary is-centered"></div>
+            <div class="timeline-content">
+                <h4 class="title is-4">2007</h4>
+                <h4 class="subtitle is-6">Started obtaining a signed piece of paper to help me disguise as an adult</h4>
+            </div>
+        </div>
+        
+        <div class="timeline-item is-hidden"></div>
+
+
+        <div class="timeline-item is-primary">
+            <div class="timeline-marker is-image is-128x128">
+                <div class="image is-128x128" v-backgroundimage="'dancinguni.jpg'">
+                </div>
+            </div>
+
+            <div class="timeline-content is-128x128">
+                <p class="auto-margin">I did a lot of dancing during my uni days...</p>
+            </div>
+        </div>*@
+
+
+
+@*Section*@
+<timeline-item title="2011" subtitle="Obtained my license to work and pretended I knew stuff and got myself a job" image="grad.jpg" description="I have no idea who all these people are...just found them walking on the street so I took a photo with them"></timeline-item>
+
+@*<div class="timeline-item is-primary">
+            <div class="timeline-marker is-primary is-centered"></div>
+            <div class="timeline-content">
+                <h4 class="title is-4">2011</h4>
+                <h4 class="subtitle is-6">Obtained my license to work and pretended I knew stuff and got myself a job</h4>
+            </div>
+        </div>
+        
+        <div class="timeline-item is-hidden"></div>
+
+
+        <div class="timeline-item is-primary">
+            <div class="timeline-marker is-image is-128x128">
+                <div class="image is-128x128" v-backgroundimage="'grad.jpg'">
+                </div>
+            </div>
+
+            <div class="timeline-content is-128x128">
+                <p class="auto-margin">I have no idea who all these other people are...I kinda do, they were there during my graduation we took a photo together</p>
+            </div>
+        </div>*@
+
+
+
+@*Section*@
+<timeline-item title="2014" subtitle="Married my biggest and greatest fan" image="wedding.jpg" description="Ball and chain (just jokes Amelia)"></timeline-item>
+
+
+@*<div class="timeline-item is-primary">
+        <div class="timeline-marker is-primary is-centered"></div>
+        <div class="timeline-content">
+            <h4 class="title is-4">2014</h4>
+            <h4 class="subtitle is-6">Married my biggest and greatest fan</h4>
         </div>
     </div>
+    <div class="timeline-item is-hidden"></div>
 
-    <div class="section" id="section1" data-anchor="2">
-        <div class="section-content-80">
-            <p>
-                I'm a software developer <strong>wanna-be</strong>. Although I know how to code and how general programming works, I have not achieved my goal to becoming a software architect ninja guru sensei master.
-            </p>
+
+        <div class="timeline-item is-primary">
+            <div class="timeline-marker is-image is-128x128">
+                <div class="image is-128x128" v-backgroundimage="'wedding.jpg'">
+                </div>
+            </div>
+
+            <div class="timeline-content is-128x128">
+                <p class="auto-margin">Ball and chain (just jokes Amelia)</p>
+            </div>
+        </div>*@
+
+
+
+@*Section*@
+<timeline-item title="2015" subtitle="Visited 38272037 ancient churches for three months in Europe" image="europe.jpg" description="Inside the infamous Sagrada Familia in Barcelona"></timeline-item>
+
+@*<div class="timeline-item is-primary">
+        <div class="timeline-marker is-primary is-centered"></div>
+        <div class="timeline-content">
+            <h4 class="title is-4">2015</h4>
+            <h4 class="subtitle is-6">Visited 38272037 ancient churches for three months in Europe</h4>
         </div>
     </div>
-    <div class="section" id="section2">
-        <div class="section-content">
-            <div>
-                <span class="head">1988</span>
-                <span class="sub-head">Born in Cebu, Philippines - where seashells are used as currency</span>
+        
+    <div class="timeline-item is-hidden"></div>
+
+
+    <div class="timeline-item is-primary">
+            <div class="timeline-marker is-image is-128x128">
+                <div class="image is-128x128" v-backgroundimage="'europe.jpg'">
+                </div>
             </div>
 
-            <div>
-                <div class="img"></div>
-                <p>
-                    They don't really, but it is known to be the oldest city of the country. That is a picture of a young me.
-                </p>
+            <div class="timeline-content is-128x128">
+                <p class="auto-margin">This is inside the infamous Sagrada Familia in Barcelona </p>
             </div>
-            <div class="clear-fix"></div>
-            <div>
-                <span class="head">2002</span>
-                <span class="sub-head">Born in Cebu, Philippines - where seashells are used as currency</span>
-            </div>
+        </div>*@
 
-            <div>
-                <div class="img"></div>
-                <p>
-                    They don't really, but it is known to be the oldest city of the country. That is a picture of a young me.
-                </p>
+
+
+@*Section*@
+<timeline-item title="2016" subtitle="Went back to the Motherland and time travelled to the future aka. Japan" image="japan.jpg" description="Japan is probably by far my favorite country I have travelled to"></timeline-item>
+
+@*<div class="timeline-item is-primary">
+            <div class="timeline-marker is-primary is-centered"></div>
+            <div class="timeline-content">
+                <h4 class="title is-4">2016</h4>
+                <h4 class="subtitle is-6">Went back to the Motherland and time travelled to the future aka. Japan</h4>
             </div>
         </div>
-    </div>
-    <div class="section" id="section3">e</div>
+
+        <div class="timeline-item is-primary">
+            <div class="timeline-marker is-image is-128x128">
+                <div class="image is-128x128" v-backgroundimage="'japan.jpg'">
+                </div>
+            </div>
+
+            <div class="timeline-content">
+                <div class="image is-128x128"></div>
+            </div>
+        </div>
+
+        <div class="timeline-item is-hidden"></div>*@
+
+
+@*Section*@
+<timeline-item title="2018" subtitle="Spawned a poop machine" image="rt.jpg" description="The fruit of my loins. My pride and joy"></timeline-item>
+
+@*<div class="timeline-item is-primary">
+            <div class="timeline-marker is-primary is-centered"></div>
+            <div class="timeline-content">
+                <h4 class="title is-4">2018</h4>
+                <h4 class="subtitle is-6">Help spawn a poop machine</h4>
+            </div>
+        </div>
+
+        <div class="timeline-item is-primary">
+            <div class="timeline-marker is-image is-128x128">
+                <div class="image is-128x128" v-backgroundimage="'1.jpg'">
+                </div>
+            </div>
+
+            <div class="timeline-content">
+                <div class="image is-128x128"></div>
+            </div>
+        </div>
+
+        <div class="timeline-item is-primary">
+            <div class="timeline-marker is-image is-128x128">
+                <div class="image is-128x128" v-backgroundimage="'Cebu.jpg'">
+                </div>
+            </div>
+
+            <div class="timeline-content">
+                <div class="image is-128x128"></div>
+            </div>
+        </div>*@
+    <header class="timeline-header">
+        <span class="tag is-large is-primary">Still going...</span>
+    </header>
+</div>
 
 </div>
+
