--- a/CV/Content/bulma.css
+++ b/CV/Content/bulma.css
@@ -9693,7 +9693,18 @@ label.panel-block:hover {
     border-color: #363636;
 }
 
+.image.is-100x100 {
+    height: 100px;
+    width: 100px;
+}
+
 .is-128x128 {
     height: 128px;
     width: 128px;
 }
+
+.is-100x00 {
+    height: 100px;
+    width: 100px;
+}
+
