--- a/CV/Content/x.css
+++ b/CV/Content/x.css
@@ -22,17 +22,18 @@
     color: white;
 }*/
 
+/*@font-face {
+    font-family: Dense;
+    src: url(fonts)
+}*/
+
 
 body {
     margin: 0;
     padding: 0;
-    font-family: 'Source Sans Pro', sans-serif;
-}
+    font-family: 'Nanum Gothic', sans-serif;
+    /*letter-spacing: 0.5em;*/
 
-#container {
-    position: relative;
-    /*padding-left: 100px;
-    padding-right: 100px;*/
 }
 
 #navbar {
@@ -205,8 +206,13 @@ body {
     position: absolute;
 }
 
-.container {
+.section-margin {
     margin: 5%;
+}
+
+.sub-section-margin {
+    margin: 2%;
+    margin-bottom: 5%;
 }
 
 .auto-margin {
@@ -219,4 +225,28 @@ body {
 
 .has-bottom-border {
     border-bottom: solid 3px black;
+}
+
+.has-mt4-color {
+    background-color: #1c347d;
+}
+
+.has-crm-color {
+    background-color: #5b8d5a;
+}
+
+.has-nftb-color {
+    background-color: #b2812c;
+}
+
+.has-no-bottom-margin {
+    margin-bottom: 0 !important;
+}
+
+.modal-content, .modal-card {
+    width: 90%;
+}
+
+.tile i {
+    margin-bottom: 1.5em;
 }
