--- a/CV/Content/xindex.css
+++ b/CV/Content/xindex.css
@@ -27,17 +27,24 @@
 }
 
 @-webkit-keyframes shake {
-    0% { transform: translate(1px, 1px) rotate(0deg); }
+    0% {
+         transform: translate(1px, 1px) rotate(0deg);
+
+    }
     10% { transform: translate(-1px, -2px) rotate(-1deg); }
     20% { transform: translate(-2px, 0px) rotate(1deg); }
     30% { transform: translate(1px, 2px) rotate(0deg); }
     40% { transform: translate(1px, -1px) rotate(1deg); }
-    50% { transform: translate(-1px, 2px) rotate(-1deg); }
+    50% {
+         transform: translate(-1px, 2px) rotate(-1deg);
+    }
     60% { transform: translate(-2px, 1px) rotate(0deg); }
     70% { transform: translate(0px, 1px) rotate(-1deg); }
     80% { transform: translate(-1px, -1px) rotate(1deg); }
     90% { transform: translate(1px, 2px) rotate(0deg); }
-    100% { transform: translate(1px, -2px) rotate(-1deg); }
+    100% {
+         transform: translate(1px, -2px) rotate(-1deg);
+    }
 }
 
 /*.myprogress-container {
@@ -66,6 +73,34 @@
     background-color: lightgray;
 }
 
-.progress::-webkit-progress-value {
-    
+@-webkit-keyframes pulse {
+    0% { background-color: gray; }
+    50% { background-color: red; }
+    100% { background-color: gray; }
+}
+  
+@-moz-keyframes pulse {
+    0% { background-color: gray; }
+    50% { background-color: red; }
+    100% { background-color: gray; }
+}
+  
+@-o-keyframes pulse {
+    0% { background-color: gray; }
+    50% { background-color: red; }
+    100% { background-color: gray; }
+}
+  
+@keyframes pulse {
+    0% { background-color: gray; }
+    50% { background-color: red; }
+    100% { background-color: gray; }
+}
+  
+.pulse {
+    background: gray;
+    -webkit-animation: pulse 1s infinite; /* Safari 4+ */
+    -moz-animation:    pulse 1s infinite; /* Fx 5+ */
+    -o-animation:      pulse 1s infinite; /* Opera 12+ */
+    animation:         pulse 1s infinite; /* IE 10+, Fx 29+ */
 }
