--- a/CV/Views/Shared/_Layout.cshtml
+++ b/CV/Views/Shared/_Layout.cshtml
@@ -5,8 +5,10 @@
     <meta name="viewport" content="width=device-width" />
     <title>@ViewBag.Title</title>
     <link rel="stylesheet" href="~/Content/bulma.css">
-    <link href="https://fonts.googleapis.com/css?family=Source+Sans+Pro" rel="stylesheet">
+    @*<link href="https://fonts.googleapis.com/css?family=Source+Sans+Pro" rel="stylesheet">*@
+    <link href="https://fonts.googleapis.com/css?family=Nanum+Gothic:800" rel="stylesheet">
     <link rel="stylesheet" href="~/Content/x.css">
+    <link rel="stylesheet" href="~/Content/fontawesome.css">
 
 
 </head>
@@ -14,22 +16,22 @@
 <script src="~/Scripts/jquery-3.3.1.js"></script>
 <script src="~/Scripts/vue.js"></script>
 
-<script src="~/Scripts/x.es6.js"></script>
+<script src="~/Scripts/x.js"></script>
 <script src="~/Scripts/xmylife.es6.js"></script>
 
-<div id="navbar">
+@*<div id="navbar">
     <ul>
         <li><a href="#"> Why me? </a></li>
         <li><a href="#"> Portfolio </a></li>
         <li><a href="#"> About </a></li>
     </ul>
-</div>
+</div>*@
 <div id="vue-instance">
-    <button id="nav-button">
+    @*<button id="nav-button">
         <span></span>
         <span></span>
         <span></span>
-    </button>
+    </button>*@
     @RenderBody()
 
 </div>
