--- a/CV/Views/Project/NFTB.cshtml
+++ b/CV/Views/Project/NFTB.cshtml
@@ -1,6 +1,6 @@
 ﻿<div class="hero is-medium is-primary">
     <div class="hero-body">
-        MT4 - 2018
+        NFTB - 2017
     </div>
 </div>
 
@@ -9,26 +9,68 @@
         <div class="tile is-6 is-parent">
             <div class="tile is-child box">
                 <p class="title">Overview</p>
-                <p> The company I was working for at the time had an internal CRM system written as a desktop application, backed by an MSAccess db. This was problematic due to compatibility issues with running the application on different platforms. </p>
+                <p> Before I became a professional nappy changer, I played social basketball. As part of this commitment, I coordinated all the logistics including the collection of money. This meant some pretty hefty calculations! </p>
+                <p>
+                    The creation of this app was inspired by a couple of things:
+                    <ul>
+                        <li> My goal of successfully creating a mobile app </li>
+                        <li> Make my life easier.</li>
+                    </ul>
+                    
+                    
+
+                </p>
             </div>
 
         </div>
         <div class="tile  is-vertical is-parent">
             <div class="tile is-child box">
                 <p class="title">Problem</p>
-                <p> The company I was working for at the time had an internal CRM system written as a desktop application, backed by an MSAccess db. This was problematic due to compatibility issues with running the application on different platforms.  </p>
+                <p>
+                    The payment structure of this weekly event was done on a term by term basis. However, there are two types of players - permanent and casual. Total amount for permanent players are dependent on how many casual players have attended during the term.
+                </p>
+                <p>
+                    On top of that, week after week, players, both permanent and casual, were asking for IOUs or forgetting to pay their fee. I wanted to keep track of these problematic people so I can get my lackeys to sort them out. ;)
+                </p>
             </div>
             <i class="fas fa-arrow-down has-text-centered"></i>
             <div class="tile is-child box">
                 <p class="title">Solution</p>
-                <p> Rewrite the front end application to a web application. We converted the database to an MSSQL database and went from there.</p>
+                <p> Create a mobile app using Xamarin which is an automatic calculator that keeps a record of who owes money, and how much each player needs to pay at the end of the term. </p>
             </div>
             <i class="fas fa-arrow-down has-text-centered"></i>
         </div>
     </div>
     <div class="box">
-        <p class="title">What I learned</p>
+        <h3 class="title is-3 has-bottom-border">What I learned</h3>
+        <div class="content">
+            <h6 class="title is-6">Digging deep with Xamarin.Forms </h6>
+            <p>
+                One of the biggest reason for creating this mobile app was to enhance my understanding further about Xamarin.Forms. I was in the middle of completing a Xamarin.Forms projects and I wanted to learn more about it to enhance my understanding.
+                Building this app definitely served that purpose and I was able to
+            </p>
+        </div>
 
+        <div class="content">
+            <h6 class="title is-6">Getting my feet wet with .NET Web API from scratch</h6>
+            <p>
+                This was a really good way of getting myself more familiar on how .NET Web API works from scratch. It was good to see its functionality and potential in comparison to .NET MVC 5.
+            </p>
+        </div>
+
+        <div class="content">
+            <h6 class="title is-6">Scope creep is a real thing</h6>
+            <p>
+                The original purpose of this project was quite basic - find out who has paid for the casual sessions and calculate the total amount for permanent players at the end of the term.
+                Realistically, I could have just created an Excel spreadsheet and it would have been done in a couple of hours. But where's the fun in that?
+            </p>
+            
+            <p>
+                I started thinking it would be nice to record the attendances so I implemented an attendance module. Then I started to think about how it would be cool to have the application automatically send out notifications to players. And then I got into thinking how it would be cool to integrate my other personal ideas into this app etc. etc. etc.
+                I then realised that this is what they talk about when they say scope creep. Unfortunately, I didn't get to utilise my app since I stopped basketball altogether. I have every intention on finishing it.
+            </p>
+
+        </div>
     </div>
 </div>
 
