--- a/CV/Views/Project/MT4.cshtml
+++ b/CV/Views/Project/MT4.cshtml
@@ -1,35 +1,71 @@
 ﻿
 
+
+
+
 <div class="hero is-medium is-primary">
     <div class="hero-body">
         MT4 - 2018
+        <a class="button">
+            <span class="icon"><i class="fab fa-github"></i></span>
+            <span>View on GitHub</span>
+        </a>
     </div>
 </div>
 
 <div class="section-margin">
+    
     <div class="tile is-ancestor">
         <div class="tile is-6 is-parent">
-            <div class="tile is-child box">
-                <p class="title">Overview</p>
-                <p> The company I was working for at the time had an internal CRM system written as a desktop application, backed by an MSAccess db. This was problematic due to compatibility issues with running the application on different platforms. </p>
+            <div class="tile is-child">
+                <h3 class="title is-3">Overview</h3>
+                <p> Everyone wants to be rich. I am no exception. My good friend and I decided to collaborate. He has been making playing around with his own patterns and thought it would be great to automate his trades</p>
+                <p> MT4 is a programmable forex trading platform. It allows you to create tools </p>
             </div>
 
         </div>
         <div class="tile  is-vertical is-parent">
             <div class="tile is-child box">
-                <p class="title">Problem</p>
-                <p> The company I was working for at the time had an internal CRM system written as a desktop application, backed by an MSAccess db. This was problematic due to compatibility issues with running the application on different platforms.  </p>
+                <h3 class="title is-3">Problem</h3>
+                <p>
+                    From my limited knowledge, Forex trading comes down to recognising patterns and making trades at the correct time before patters chage. This is both time consuming and could potentially have lost opportunities.
+                </p>
             </div>
             <i class="fas fa-arrow-down has-text-centered"></i>
             <div class="tile is-child box">
-                <p class="title">Solution</p>
-                <p> Rewrite the front end application to a web application. We converted the database to an MSSQL database and went from there.</p>
+                <h3 class="title is-3">Solution</h3>
+                <p> Build an automated trading robot using their platform. In addition to the trading robot, we needed to be able to backtest the algorithm with real historical data.</p>
             </div>
             <i class="fas fa-arrow-down has-text-centered"></i>
         </div>
     </div>
     <div class="box">
-        <p class="title">What I learned</p>
+        <h3 class="title is-3 has-bottom-border">What I learned</h3>
+        <div class="content">
+            <h6 class="title is-6">I am thankful for VisualStudio and ReSharper ?????</h6>
+            <p>
+                Having the right tools reduces the time it takes to develop. MT4 had their own editor which is pretty basic and it made me appreciate features as simple as "Go to Definition" or having squiggly lines to tell you that you missed a semicolon. 
+                I have always thought developing in the most basic tools is the coolest thing (Notepad++) but this has cemented it in my head that people should utilise the right tools for the job to make their lives easier.
+            </p>
+        </div>
+        
+        <div class="content">
+            <h6 class="title is-6">Date and time concepts are a pain to deal with</h6>
+            <p>
+                I have known this since I've worked at Blackball Software and the issue comes down to localisation. A system should be able to save and retrive datetime values based on a current user's timezone.
+                Even with the right DateTime extensions at my current job that have been developed overtime still trips me up but developing it in a system where there is no concept of UTC time format deemed a bit difficult.
+                I wanted the automation to account for Daylight Time Savings so there is no need for human intervention at all. I have somewhat come to a solution with the limited functions that the platform provides.
+            </p>
+        </div>
+        
+        <div class="content">
+            <h6 class="title is-6">It's sometimes better to reinvent the wheel</h6>
+            <p>
+                MT4 provided a backtesting solution which was great... which I initially thought until the system started falling over with massive amounts of data. 
+                The backtest process was slow, the code had to be re-engineered specifically for backtesting, the data that was used was sometimes incomplete - basically it was a mess. 
+                So I decided to start backtesting project in C#. That way, I was in a familiar environment and my speed increased significantly
+            </p>
+        </div>
 
     </div>
 </div>
