--- a/CV/Views/Shared/_Layout.cshtml
+++ b/CV/Views/Shared/_Layout.cshtml
@@ -5,6 +5,10 @@
     <meta name="viewport" content="width=device-width" />
     <title>@ViewBag.Title</title>
     <link rel="stylesheet" href="~/Content/bulma.css">
+    <link rel="stylesheet" href="~/Content/modal-fx.min.css">
+
+
+    
     @*<link href="https://fonts.googleapis.com/css?family=Source+Sans+Pro" rel="stylesheet">*@
     <link href="https://fonts.googleapis.com/css?family=Nanum+Gothic:800" rel="stylesheet">
     <link rel="stylesheet" href="~/Content/x.css">
@@ -16,8 +20,6 @@
 <script src="~/Scripts/jquery-3.3.1.js"></script>
 <script src="~/Scripts/vue.js"></script>
 
-<script src="~/Scripts/x.js"></script>
-<script src="~/Scripts/xmylife.es6.js"></script>
 
 @*<div id="navbar">
     <ul>
@@ -35,6 +37,9 @@
     @RenderBody()
 
 </div>
+    
+    <script src="~/Scripts/x.js"></script>
+
 
 </body>
 </html>
